# psdetsim

./: CMakeLists.txt  FRDM-QRPA12-halflife.txt  README.md  hdx.root  hdy.root  himpx.root  himpy.root  hx.root  hy.root  mainsimulation.cc  parmsex.txt  simparmsex.txt  stable.csv
include/: common.hh  decaypath.hh  decaypathLinkDef.hh  fitF.hh  fitFLinkDef.hh  simulation.hh  simulation.i
src/: decaypath.cc  fitF.cc  fitF_auxiliary.cc  fitF_cal.cc  simulation.cc
